# SimPassFinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_processing.py  main.py  preprocess.py  requirements.txt  run .sh  run.sh  test.py
cpp/: CMakeLists.txt  graph.cpp
dataset/graph/: _nodes.json  categories.json  categories_old.json  countries.json  edges_reuse_old.json  nodes.json  nodes_old.json
dataset/meta_data.json/: meta_data copy.json  meta_data.json
passrefinder/: main.py
passrefinder/src/: __init__.py  evaluate.py  graph_utils.py  utils.py
python/: analysis.py  data_processing.py  main.py  preprocess.py  pwd_sim.py  requirements.txt
python/src/: __init__.py  data_processing.py  early_stopping.py  evaluate.py  graph.py  utils.py
python/src/gat/: __init__.py  gat.py
python/src/gcn/: gcn.py
python/src/graph_sage/: graph_sage.py
python/src/graph_sage/gnn/: sageconvn.py
python/src/mlp/: mlp.py
src/: __init__.py  classifier.py  evaluate.py  graph.py  utils.py
src/GAT/: gat.py
src/gcn/: gcn.py
src/gnn/: sageconvn.py
src/graph_sage/: __init__.py  graph_sage.py
src/graph_sage/gnn/: sageconvn.py
src/mlp/: classifier.py  mlp.py
